--- a/ArbeitBib.bib
+++ b/ArbeitBib.bib
@@ -18,6 +18,7 @@
 
 
 @BOOK{RalfEbert,
+   year = {2004},
    author	=	{Ralf Ebert},
    title	=	{Eclipse RCP - Entwicklung von Desktop-Anwendungen mit der Eclipse Rich Client}, 
    note 	= 	{\url{http://www.ralfebert.de/archive/eclipse_rcp/EclipseRCP.pdf}}
@@ -25,52 +26,48 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@BOOK{mueller2000,
-   AUTHOR="J.-A. Müller",
-   TITLE="Systems Engineering",
-   PUBLISHER="Manz-Verlag Schulbuch (Fortis)",
-   YEAR=2000,
-   ADDRESS="Wien"
-}   
-
-@Misc{fsf:2007,
-  author = 	 {{Free Software Foundation}},
-  title = 	 {{GNU AFFERO GENERAL PUBLIC LICENSE}},
-  howpublished = {\url{http://www.gnu.org/licenses/agpl-3.0.de.html}},
-  year = 	 {2007}
+@book{BertholdDaum,
+author = {Berthold Daum},
+title = {Rich-Client-Entwicklung mit Eclipse 3.3. - Anwendungen, Plugins und Rich Clients},
+year = {2007}
+publisher = {Dpunkt.Verlag GmbH, 2004}
 }
 
-@Unpublished{mustermann:2012,
-  author = 	 {Max Mustermann},
-  title = 	 {Musterthema},
-  year = 	 {2012},
-  address = {Musterstadt},
-  note = {Studienarbeit}
+@book{SWT,
+author = {Steve Northover, Mike Wilson},
+title = {SWT: The Standard Widget Toolkit, Volume 1},
+year = {2004},
+publisher = {Addison-Wesley Professional}
 }
 
-@book{baumgartner:2002,
-title = {E-Learning Praxishandbuch : Auswahl von Lernplattformen; Marktübersicht, Funktionen, Fachbegriffe},
-author = {Baumgartner, Peter and Häfele, Hartmut and Maier-Häfele, Kornelia},
-address = {Innsbruck},
-publisher = {StudienVerl.},
-year = {2002},
-isbn = {3-7065-1771-X}
+
+@book{rcp_unternehmenseinsatz,
+author = {Stefan Reichert},
+title = {Eclipse RCP im Unternehmenseinsatz: Verteilte Anwendungen entwerfen, entwickeln, testen und betreiben},
+year = {2009},
+publisher = {dpunkt Verlag; Auflage: 1}
 }
+
+@book{maven_popp,
+author = {Günther Popp},
+title = {Konfigurationsmanagement mit Subversion, Maven und Redmine: Grundlagen für Softwarearchitekten und Entwickler},
+year = {2013},
+publisher = {dpunkt.verlag GmbH; Auflage: 4}
+}
+
+
+@periodical{eclipse_magazin,
+title = {Eclipse Magazin 3.10},
+date = {03.2010},
+OPTurl = {ftp://ftp.herasaf.org/EclipseMagazin/ECM%203.10_Forster_Sylejmani_Eggenschwiler_Maven.pdf},
+year = {2010}
+}
+
+
+
+
+
+
+
+
+
