--- a/ads/abstract.tex
+++ b/ads/abstract.tex
@@ -16,7 +16,7 @@ OSGi, Eclipse RCP, GUI, Filterprofil, Plug-in
 \newline
 \textbf{Kurzzusammenfassung}{
 \newline
-In dieser Arbeit wird untersucht, inwiefern es möglich ist, Plug-ins in eine bestehende Eclipse \ac{RCP}-Applikation zu integrieren. Dabei steht vor allem die grafische Einbindung in das bestehende Softwarekonstrukt im Vordergrund. Die Konzeption und Umsetzung eines Plug-ins im \ac{RCP}-Umfeld gehört ebenfalls zum Kern dieser Arbeit. Neben den Grundlagen der Eclipse \ac{RCP} Entwicklung werden verwandte Themen, wie beispielsweise \ac{OSGi} behandelt.
+In dieser Arbeit wird untersucht, inwiefern es möglich ist, Plug-ins in eine bestehende Eclipse \ac{RCP}-Applikation zu integrieren. Dabei steht die grafische Einbindung in das bestehende Softwarekonstrukt im Vordergrund. Die Konzeption und Umsetzung eines Plug-ins im \ac{RCP}-Umfeld gehört ebenfalls zum Kern dieser Arbeit. Neben den Grundlagen der Eclipse \ac{RCP} Entwicklung werden verwandte Themen, wie \ac{OSGi} behandelt.
 
 }
 
@@ -31,19 +31,19 @@ In dieser Arbeit wird untersucht, inwiefern es möglich ist, Plug-ins in eine be
 
 \renewcommand{\abstractname}{Summary}
 \begin{abstract}
-\textbf{Thema der Arbeit}{
+\textbf{Subject Of This Work}{
 \newline
 Integration of plug-ins in an existing Eclipse \ac{RCP} environment, as well as their graphical embedding in an \ac{RCP} application based on \ac{OSGi}.
 }
 \newline
-\textbf{Stichworte}{
+\textbf{Tags}{
 \newline
 OSGi, Eclipse RCP, GUI, Filterprofil, Plug-in
 }
 \newline
-\textbf{Kurzzusammenfassung}{
+\textbf{Executive Summary}{
 \newline
-In this work it is studied how to extent it is possible to integrate plug-in into an existing Eclipse \ac{RCP} application. In particular, the graphic integration into the existing software construct is in the foreground. The design and implementation of a plugin in the \ac{RCP} environment is also part of the core of this work. Besides the basics of Eclipse \ac{RCP} development related issues, such as \ac{OSGi} are treated.
+In this work it is studied how to integrate plug-ins into an existing Eclipse \ac{RCP} application. In particular, the graphic integration into the existing software construct is in the foreground. The design and implementation of a plug-in in the \ac{RCP} environment is also part of the core of this work. Besides the basics of Eclipse \ac{RCP} development related issues such as \ac{OSGi} are treated.
 
 }
 
