--- a/ads/acronyms.tex
+++ b/ads/acronyms.tex
@@ -19,4 +19,9 @@
 \acro{HTML}{Hypertext Markup Language}
 \acro{XHTML}{Extensible Hypertext Markup Language}
 \acro{JRE}{Java Runtime Environment}
+\acro{MVC}{Model View Controller}
+\acro{SAX}{Simple API for XML}
+\acro{DOM}{Document Object Model}
+\acro{ASE}{Apache Software Foundation}
+\acro{JaxB}{Java Architecture for XML Binding}
 \end{acronym}
