--- a/ads/glossary.tex
+++ b/ads/glossary.tex
@@ -14,3 +14,19 @@
 \newglossaryentry{Mockup}{name={Mockup},plural={Mockups},description={Ein Mockup ist ein maßstäbliches Modell, das oft zu Präsentationszwecken oder zur Veranschaulichung genutzt wird}}
 
 \newglossaryentry{Toolbar}{name={Toolbar},plural={Toolbars},description={Eine Toolbar (Statusleiste) ist eine waagerechte oder senkrechte Leiste mit kleinen, häufig bebilderten Schaltflächen, die als erweiternde Elemente der Menüführung von Programmen mit grafischer Benutzeroberfläche dienen}}
+
+\newglossaryentry{String}{name={String},plural={Strings},description={Ein String ist eine Zeichenkette bzw. eine Folge von Zeichen aus einem definierten Zeichensatz}}
+
+\newglossaryentry{Framework}{name={Framework},plural={Frameworks},description={Programmiergerüst, das in der Softwaretechnik im Rahmen der objektorientierten Softwareentwicklung sowie bei komponentenbasierten Entwicklungsansätzen verwendet wird}}
+
+\newglossaryentry{Logging}{name={Logging},plural={Loggings},description={(Automatische) Speicherung von Prozessen und Datenänderungen}}
+
+\newglossaryentry{Plug-in}{name={Plug-in},plural={Plug-ins},description={Erweiterungsmodul, das von einer Software während ihrer Laufzeit erkannt und angeschlossen werden kann. Mit Plug-ins werden Applikationen um zusätzliche Funktionalitäten erweitert}}
+
+\newglossaryentry{Repository}{name={Repository},plural={Repositories},description={Verwaltetes Verzeichnis zur Speicherung und Beschreibung von digitalen Objekten (oft genutzt im Zusammenhang mit Versionsverwaltung)}}
+
+\newglossaryentry{Versionsverwaltung}{name={Versionsverwaltung},plural={Versionsverwaltungen},description={System, das zur Erfassung von Änderungen an Dokumenten oder Dateien verwendet wird. Alle Versionen werden in einem Archiv oder Repository abgelegt, um ungewollte Datenverluste zu vermeiden}}
+
+
+
+
