--- a/ads/header.tex
+++ b/ads/header.tex
@@ -57,7 +57,7 @@
 
 % Farben
 \usepackage{color}
-\definecolor{LinkColor}{rgb}{0,0,0.2}
+\definecolor{LinkColor}{rgb}{0,0,0}
 \definecolor{ListingBackground}{rgb}{0.92,0.92,0.92}
 \definecolor{pblue}{rgb}{0.13,0.13,1}
 \definecolor{pgreen}{rgb}{0,0.5,0}
@@ -140,7 +140,7 @@
   commentstyle=\color{pgreen},
   keywordstyle=\color{pblue},
   stringstyle=\color{pred},
-  basicstyle=\ttfamily,
+  basicstyle=\fontsize{10}{11}\ttfamily,
   moredelim=[il][\textcolor{pgrey}]{$$},
   moredelim=[is][\textcolor{pgrey}]{\%\%}{\%\%}
 }
