--- a/content/01kapitel.tex
+++ b/content/01kapitel.tex
@@ -4,10 +4,11 @@
 \label{cha:Einleitung}
 
 \section{Motivation}{
-Noch vor einigen Jahren war es nicht unüblich, Anwendungen über die Kommandozeile zu steuern. Die funktionalen Aspekte einer Anwendung hatten eine höhere Priorität als ihre Nutzbarkeit. Um komplizierte Applikationen über die Kommandozeile zu bedienen ist jedoch oft Expertenwissen notwendig. Deshalb spielt die Entwicklung von grafischen Oberflächen in der heutigen Anwendungsentwicklung eine immer größere Rolle. Es reicht oft nicht aus, dem Benutzer nur eine grafische Möglichkeit zur Steuerung einer Applikation zu geben. Im Rahmen der Software-Ergonomie spielt die Benutzerführung eine tragende Rolle. So auch bei der Anwendung Workbench for Mill Plus, eine Anwendung der Compart AG, die es dem Anwender ermöglicht bequem Prozesse zur Modifikation und Konvertierung von Dokumenten zu steuern. Der Anwendung Workbench for Mill Plus liegt die Programmiersprache Java zu Grunde. Durch die hohe Verbreitung von Java entstehen immer komplexere Anwendungen. Um die Komplexität solcher Anwendungen handhaben zu können bedient man sich oft Mitteln zur Modularisierung. Hierfür hat Java jedoch keine eigene Sprachunterstützung. \ac{OSGi} bietet die Möglichkeit, monolithischen Anwendungen, die den heutigen dynamischen Anforderungen nicht gerecht werden, entgegenzuwirken.
+Noch vor einigen Jahren war es nicht unüblich, Anwendungen über die Kommandozeile zu steuern. Die funktionalen Aspekte einer Anwendung hatten eine höhere Priorität als ihre Nutzbarkeit. Um komplexe Applikationen über die Kommandozeile zu bedienen ist jedoch oft Expertenwissen notwendig. Deshalb spielt die Entwicklung von grafischen Oberflächen in der heutigen Anwendungsentwicklung eine weitaus größere Rolle. Es reicht oftmals nicht aus, dem Benutzer nur eine grafische Möglichkeit zur Steuerung einer Applikation zu geben. Im Rahmen der Software-Ergonomie spielt die Benutzerführung eine tragende Rolle. So auch bei der Eclipse \ac {RCP} Applikation DocBridge\textsuperscript{\textregistered} Workbench for Mill Plus, einem Programm der Compart AG, die es dem Anwender ermöglicht, Prozesse zur Modifikation und Konvertierung von Dokumenten zu steuern. Der Anwendung DocBridge\textsuperscript{\textregistered} Workbench for Mill Plus liegt die Programmiersprache Java zu Grunde. Durch die hohe Verbreitung von Java entstehen immer komplexere Anwendungen. Um die Komplexität solcher Anwendungen handhaben zu können, bedient man sich oft Mitteln zur Modularisierung. Hierfür hat Java jedoch keine eigene Sprachunterstützung. \ac{OSGi} bietet die Möglichkeit, monolithischen\footnote{nicht zerlegbar} Anwendungen, die den heutigen dynamischen Anforderungen nicht gerecht werden, entgegenzuwirken. Dabei hat sich \ac{OSGi} von seiner ursprünglichen Anwendung in eingebetteten Systemen emanzipiert und wird heute auf verschiedenste Art verwendet. Anwendungsbereiche sind Server-und Webapplikationen, Mobilfunkgeräte oder Client-Anwendungen wie beispielsweise die Eclipse \ac{IDE} und ihre \ac{RCP}-Architektur. Das Eclipse \ac {RCP}-Framework bietet Möglichkeiten, Client-Anwendungen nach dem Baukastenprinzip zu entwickeln. Dies macht es für die Rich-Client-Entwicklung besonders geeignet. Applikationen, die auf dem Eclipse \ac{RCP}-Framework basieren, lassen sich durch Plug-ins um Funktionalitäten erweitern.
 }
 \section{Zielsetzung}{
-In der vorausgegangenen Praxisphase wurde vom Studenten ein Programm entwickelt, das es ermöglicht Filterprofile anhand eines gegebenen XML-Schemas zu aktualisieren. Diese Funktionalität soll nun in die DocBridge Workbench for Mill Plus integriert werden. Dies würde Kunden bei der Auslieferung eines neuen XML-Schemas die Möglichkeit geben, die Konfiguration ihrer alten Profile beizubehalten beziehungsweise ein neues Filterprofil zu erstellen, das die Konfiguration des alten Filterprofils enthält, jedoch zum neuen XML-Schema valide ist. Darüber hinaus soll es dem Anwender möglich sein, Profile in die DocBridge Workbench for Mill Plus zu importieren. Wird beim Import festgestellt, dass das Filterprofil nicht dem gegebenen XML-Schema entspricht soll dies dem Anwender kenntlich gemacht werden. 
+In der vorausgegangenen Praxisphase wurde vom Studenten ein Programm entwickelt, das es ermöglicht, Filterprofile\footnote{Dateien im XML-Format, mit denen Konvertierungsfilter konfiguriert werden} anhand eines gegebenen XML-Schemas zu aktualisieren. Auf die Funktion der Filterprofile und deren Aktualisierung wird im Kapitel \ref{cha:Grundlagen} eingegangen. Diese Funktionalität soll nun in die DocBridge\textsuperscript{\textregistered} Workbench for Mill Plus integriert werden. Dies würde Kunden bei der Auslieferung eines neuen XML-Schemas die Möglichkeit geben, die Konfiguration ihrer alten Profile beizubehalten beziehungsweise ein neues Filterprofil zu erstellen, das die Konfiguration des alten Filterprofils enthält, jedoch zum neuen XML-Schema valide ist. Darüber hinaus soll es dem Anwender möglich sein, bestehende Profile von ihrem Dateisystem in die DocBridge\textsuperscript{\textregistered} Workbench for Mill Plus zu importieren, damit diese zur Konfiguration der In- und Output-Filter verwendet werden können.
 }
-\section{Aufbau der Arbeit}{Die \nameref{cha:Einleitung} soll dem Leser einen Überblick über das Thema verschaffen. Es werden sowohl die Motivation hinter dieser Arbeit als auch deren Zielsetzung abgehandelt. Das Kapitel \nameref{cha:Grundlagen} soll dem Leser einen Überblick über das Thema verschaffen. Es werden die Motivation und die Zielsetzung dieser Arbeit erläutert. Darüber hinaus werden Begriffe und Systeme erklärt, die für das Verständnis und Nachvollziehbarkeit der Arbeit grundlegend sind. Im \nameref{cha:Hauptteil} wird die Vorgehensweise zur Problemlösung detailliert beschrieben. Er umfasst die \nameref{sec:analyse} der zugrunde liegenden Thematik ebenso wie das \nameref{sec:konzept} zur Lösung der behandelten Aufgabe. Die Umsetzung wird im Abschnitt \nameref{sec:implementierung} beschrieben. Im Abschluss daran wird auf die \nameref{sec:ergebnisse} der Arbeit eingegangen. 
+\section{Aufbau der Arbeit}{Die \nameref{cha:Einleitung} soll dem Leser einen Überblick über das Thema verschaffen. Es werden sowohl die Motivation für diese Arbeit, als auch deren Zielsetzung, dargestellt. Im Kapitel \nameref{cha:Grundlagen} werden Begriffe und Systeme erklärt, die für das Verständnis und die Nachvollziehbarkeit dieser Arbeit grundlegend sind. Im \nameref{cha:Hauptteil} wird die Vorgehensweise zur Problemlösung detailliert beschrieben. Das Kapitel besteht aus den Abschnitten \nameref{sec:analyse}, \nameref{sec:konzept}, \nameref{sec:implementierung}, \nameref{sec:ergebnisse} und \nameref{sec:Ausblick}. In der \nameref{sec:analyse} werden die zugrunde liegenden Probleme analysiert. In dem Abschnitt \nameref{sec:konzept} wird eine Lösung der behandelten Aufgabe erörtert. Die Umsetzung wird im Abschnitt \nameref{sec:implementierung} beschrieben. Im Abschluss daran wird auf die \nameref{sec:ergebnisse} der Arbeit eingegangen. Die Ergebnisse werden zusammengefasst und bewertet. Zum Schluss wird ein \nameref{sec:Ausblick} auf das, im Anschluss an diese Arbeit geplante Vorgehen, gegeben.
 }
+ 
