--- a/dokumentation.tex
+++ b/dokumentation.tex
@@ -9,7 +9,7 @@
 % Bachelorthesistitel}
 \newcommand{\martrikelnr}{8132098}
 \newcommand{\kurs}{STG-TINF12C}
-\newcommand{\datumAbgabe}{Februar 2014}
+\newcommand{\datumAbgabe}{März 2014}
 \newcommand{\firma}{Compart AG}
 \newcommand{\firmenort}{Böblingen}
 \newcommand{\abgabeort}{Stuttgart}
